kube/deployment.yml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: aquarius
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aquarius
  template:
    metadata:
      labels:
        app: aquarius
    spec:
      containers:
        - name: aquarius
          image: <IMAGE>
          ports:
            - containerPort: 3000
      imagePullSecrets:
          - name: dockerhub
