kube/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: aquarius
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - aquarius.sh
    secretName: aquarius-tls
  rules:
    - host: aquarius.sh
      http:
        paths:
          - path: /
            backend:
              serviceName: aquarius
              servicePort: 80
